--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 node_modules/
 .sass-cache/
 assets/components/
+!assets/components/bootstrap-sass/assets/stylesheets/bootstrap
 assets/css/
 index.html
 npm-debug.log
